--- a/nhst-slide.qmd
+++ b/nhst-slide.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Law of large numbers, the central limit theorem, and null hypothesis significance testing"
+title: "大数の法則と中心極限定理"
 shorttitle: "NHST, LLN, CLT"
 author: "Greg Nishihara"
 date: today
@@ -15,6 +15,8 @@ editor:
 bibliography: references.bib
 execute: 
   cache: true
+  echo: false
+  
 ---
 
 ```{r}
@@ -33,15 +35,21 @@ Sys.setlocale("LC_TIME", "en_US.UTF-8") # This is to set the server time locate 
 ```
 
 
-## Law of large numbers
+## 大数の法則
 
 **Law of large numbers (大数の法則)**
 
+::: {.callout-note}
+# 大数の法則は、
+ランダムな試行を繰り返す回数が増えるにつれて、
+試行の平均的な結果がその試行の期待値により近づいていく過程です。
 
-> An event (事象) occurs with a probability of $P$. For $n$ experiments (試行), the event 事象 occurs $r$ times. The law of large number states that when $n$ increases, then the ratio $r/n$ approaches $P$.
+つまり、ランダムな出来事は時間の経過とともに均等になる傾向があるという考えに基づいています。
+:::
 
 
-## Weak law of large numbers
+
+## 大数の弱法則 {.smaller}
 
 **Weak law of large numbers (大数の弱法則)**
 
@@ -56,14 +64,26 @@ $$
 \forall{\epsilon}>0;\;\lim_{n\rightarrow\infty}P(|\overline{X}-\mu|<\epsilon)=1
 $$
 
+::: {.callout-note}
+# 大数の弱法則
 
-::: {.notes}
-1. The expected mean approaches the true mean in probability as the sample size increases.
-
-2. For all $\epsilon>0$, as the sample size increases, the probability that the absolute value of the difference between the expected value and the true mean is less than $\epsilon$ is 1.
+観測回数が増えるにつれて、標本平均は確率収束に従って母集団平均に収束していきます。
+つまり、標本の大きさが増えるにつれて、標本平均が母集団平均に近くなる確率が高くなります。
 :::
 
-## Strong law of large numbers 
+
+
+
+::: {.notes}
+
+- The sample mean X-bar converges in probability to the population mean mu as the sample size n approaches infinity.
+- 標本平均 X-bar が、標本サイズ n が無限に近づくにつれて、確率収束において母集団平均 mu に収束する。
+- For any positive value of epsilon, the probability that the sample mean (X-bar) will be within epsilon of the population mean (mu) approaches 1 as the sample size approaches infinity.
+- 任意の正の値 エプシロン に対して、標本平均 (X-bar) が母集団平均 (ミュー) から エプシロン の範囲内にある確率が、標本サイズが無限に近づくにつれて1に収束する」という意味です。
+
+:::
+
+## 大数の強法則
 
 **Strong law of large numbers (大数の強法則)**
 
@@ -78,72 +98,82 @@ P(\lim_{n\rightarrow\infty}\overline{X}=\mu)=1
 $$
 
 ::: {.notes}
-1. The expected mean almost surely approaches the true mean as the sample size increases.
 
-2. The probability that the expected value is the true mean in the limit of large sample sizes is 1.
+- The sample mean X-bar converges almost surely to the population mean mu as the sample size n approaches infinity.
+- 標本平均 X-bar が、標本サイズ n が無限に近づくにつれて、ほとんど確実に母集団平均 mu に収束する。
+
+- The probability that the sample mean X-bar will approach the population mean mu as the sample size approaches infinity is equal to 1.
+- 標本サイズが無限に近づくにつれて、標本平均 X-bar が母集団平均 mu に近づく確率は1に等しい。
+
 :::
 
-## Simulation demonstration: Bernoulli trials
-
+## コインの裏表デモ
 
 :::: {.columns}
 ::: {.column width="50%"}
 
-```{r lltplot01, echo = F, fig.out = 3, fig.height = 3}
+```{r}
+#| fig-width: 6
+#| fig-height: 6
+# Load the libraries
+library(ggplot2)
+library(gganimate)
 library(tidyverse)
-set.seed(123) # 疑似乱数のシード
-p = 0.2  # 真の比率
-n =c(1:200) # 試行回数 1 から 200
-r = sapply(n, rbinom, n = 1, p=p) # 二項分布の疑似乱数,1 は発生させる乱数の数
-
-# データのティブル化
-df1 = tibble(r = r, n = n)
-df1 = df1  |>  mutate(rate =r/n) # 比率の計算
-
-ggplot(df1) +
-  geom_line(aes(x=n,y=rate), size = 0.1) +
-  geom_hline(yintercept = p, 
-             color = "orangered") +
-  scale_x_continuous("試行回数 (n)") +
-  scale_y_continuous("比率 (r/n)",
-                     breaks = c(0, 0.25, 0.50, 0.75, 1.0),
-                     labels = c(0,  0.25, 0.50,
-                                0.75, 1.0), limits = c(0, 1)) +
-  geom_text_repel(aes(x=n, y=rate, label = label), 
-                  data = tibble(n = 100, rate = 0.2,
-                                label = "真の比率 (p = 0.20)"),
-                  color = "navy",
-                  ylim = c(0.75),
-                  xlim = c(50))
+library(patchwork)
+n_trials <- 10
+make_data = function(n_trials = 10) {
+  tibble(data = rbinom(n_trials, size = 1, prob = 0.5)) |> mutate(color = factor(data))
+}
+p1 = ggplot(data = make_data(), aes(x = 1:n_trials, y = 1, color = color)) +
+  geom_point(size = 10, show.legend = F) +
+  theme(axis.text = element_blank(),
+        axis.title = element_blank(),
+        axis.ticks = element_blank())
+p2 = ggplot(data = make_data(), aes(x = 1:n_trials, y = 1, color = color)) +
+  geom_point(size = 10, show.legend = F) +
+  theme(axis.text = element_blank(),
+        axis.title = element_blank(),
+        axis.ticks = element_blank())
+p3 = ggplot(data = make_data(), aes(x = 1:n_trials, y = 1, color = color)) +
+  geom_point(size = 10, show.legend = F) +
+  theme(axis.text = element_blank(),
+        axis.title = element_blank(),
+        axis.ticks = element_blank())
+p1 + p2 + p3 + plot_layout(ncol = 1)
 ```
 
 :::
 ::: {.column width="50%"}
-Bernoulli trials (ベルヌーイ試行)
 
-* When $n$ increases, $r/n$ approaches the true value.
-
-* True value is $p = 0.2$
-
-* The trials range start at $1$ and end at $200$
-
-
+```{r}
+#| fig-width: 6
+#| fig-height: 6
+set.seed(2023)
+pout = 
+  tibble(size = c(seq(5, 5000, by = 5))) |> 
+  mutate(ones = map_int(size, rbinom, n = 1, prob = 0.5)) |> 
+  mutate(zeros = size - ones) |> 
+  mutate(ratio = ones / zeros) |> 
+  ggplot() + 
+  geom_segment(aes(x = size, xend = size, y = 1, yend = ratio), linewidth = 2) +
+  scale_x_continuous("Number of coin flips") +
+  scale_y_continuous("Ratio") +
+  transition_reveal(size) +
+  shadow_trail(color = "orangered", distance = 0.005)
+  
+animate(pout, nframes = 200, width = 400, height = 400)
+```
 :::
 ::::
 
-## Simulation demonstration: Bernoulli trials
 
-
-
-```{r, eval = FALSE, ref.label = "lltplot01"}
-
-```
-
-## Simulation demonstration: mean
+## 平均値のデモ
 
 :::: {.columns}
 ::: {.column width="50%"}
-```{r lltplot02, echo=FALSE}
+```{r}
+#| fig-width: 6
+#| fig-height: 6
 mu = 10
 sigma2 = mu^2
 n = 2:1000
@@ -174,11 +204,11 @@ ggplot(df1) +
 
 * Number of data ranged from $1$ to $1000$
 
-**Code for the pseudo-random values from the normal distribution**
+**R Code for the pseudo-random values from the normal distribution**
 
-
-
-```{r, eval=F}
+```{r}
+#| eval: false
+#| echo: true
 mu = 10              # 真の平均値
 sd = 10              # 真の標準偏差
 n = 5                # データ回数
@@ -190,13 +220,15 @@ m = rnorm(n, mu, sd) # 正規分布の疑似乱数
 
 # Central limit theorem
 
-## Central limit theorem (中心極限定理)
+## 中心極限定理
 
-The random variables (確率変数) $X_1, X_2, ..., X_n$ are independent and identically distributed (独立同分布) with a mean of $\mu$ and a variance of $\sigma^2$.
-Therefore the sample mean is  $S_n \equiv \frac{1}{n}\sum_{k=1}^n X_k$.
+中心極限定理とは、多数の独立かつ同一分布に従う確率変数の平均値の分布が、
+一定の条件下では、正規分布に近似することを示す。
 
-The law of large numbers ensures that when $S_n \rightarrow \mu$, then $n\rightarrow \infty$.
-Then the central limit theorem (中心極限定理) states that the difference between the sample mean and the true mean follows a standard normal distribution.
+データの分布に関わらず、データの平均値を大量に求めると、その平均値自体が正規分布に近似することが期待できる。
+平均値は、正規分布に従うことで、母集団の平均値や分散についての推論ができるようになる。
+
+統計学において非常に重要な定理です。
 
 
 ## Central limit theorem (中心極限定理)
@@ -207,14 +239,22 @@ $$
 $$
 
 
+::: {.notes}
+This equation expresses that as the sample size $n$ approaches infinity, the standardized sample mean $\frac{\overline{X}_n - \mu}{\sigma}$ multiplied by $\sqrt{n}$ approaches a normal distribution with mean $0$ and variance $\sigma^2$.
 
-## Demonstration
+この式は、標本数 $n$ が無限大に近づくにつれて、$\sqrt{n}$ と $\frac{\overline{X}_n - \mu}{\sigma}$ の積は、平均 $0$、分散 $\sigma^2$ の正規分布に近づくことを表す。
+
+:::
+
+
+## サイコロのデモ
+
 :::: {.columns}
 ::: {.column width="50%"}
 
-* Each trial is the mean of 6 dice rolls.
-* When $N$ increases, the sample mean converges to the normal distribution (CLT).
-* The law of large numbers ensures that the sample mean converges to the true mean($\mu = 3.5$).
+* 各試行は6つのサイコロの出目の平均です。
+* $N$ が増えるにつれて、標本平均は正規分布に収束します（中心極限定理）。
+* 大数の法則により、標本平均は真の平均値（$\mu = 3.5$）に収束することが保証されます。
 
 :::
 ::: {.column width="50%"}
@@ -297,98 +337,59 @@ df1 |> unnest(data) |>
 
 # Scientific Method
 
-## Scientific Method (科学的方法)
+## Scientific Method (科学的方法)　{.smaller}
 
-\centering
-\begin{tikzpicture}[transform canvas = {scale = 0.8},
-base/.style = {draw, minimum width=20ex, align=center, rectangle, rounded corners, text width = 20ex, white, fill=blue},
-noarrow/.style =  {->, arrows={-Stealth[inset = 0pt, angle=40:15pt]}, red, line width = 4pt},]
-\draw[color=blue, dashed, ultra thick] (0,4) to (0,-4);
+合理的に研究をするためには、科学的方法を用います。
+科学的方法には6つのステップがあり、切り返して行うことが一般的です。
 
-\node (c) at (0,0) [draw, rounded corners, blue, fill=white] {Scientific method};
-\node (s1) [base, above=of c] {Hypothesis\\Inference};
-\node (s2) [base, left=of c]  {Results};
-\node (s3) [base, below=of c] {Data};
-\node (s4) [base, right=of c] {Inference\\Testing theory};
+- 観察：まず、自然界を観察します。
+- 質問：観察した自然現象について、科学的に検証できる（実験）課題を考えます。
+- 仮説：仮説は、質問に対する合理的な推測です。実験で検証できるものです。
+- 実験：実験を行い、考えた仮説が正しいかどうかを確認します。ここでデータ収集します。
+- 分析：実験で得たデータを統計学的に解析します。データは、考え上げた仮説を支持するか否定するかを検証します。
+- 結論：仮説が支持された場合は、考え上げた仮説が現段階で正しいと結論つけられますが、否定された場合は、仮説を修正するかまたは新たな仮説を開発します。
 
-\node (a) [below left=1.0cm and 0.5cm of s3]{Inferential data analysis};
-\node (b) [below right=1.0cm and 0.5cm of s3]{Exploratory data analysis};
-\draw[noarrow] (s1) to[out=180, in=90]  (s2);
-\draw[noarrow] (s2) to[out=270, in=180] (s3);
-\draw[noarrow] (s3) to[out=0,   in=270] (s4);
-\draw[noarrow] (s4) to[out=90,  in=0]   (s1);
-\path[decorate, decoration={text align={center},text along path, text={|\small| Deduction},     raise=4mm}]  (s2) to [out=90, in=180, looseness=1]  (s1);
-\path[decorate, decoration={text align={center},text along path, text={|\small| Plan experiments},       raise=-6.0mm}] (s2) to [out=270,in=180, looseness=1]  (s3);
-\path[decorate, decoration={text align={center},text along path, text={|\small| Induction},     raise=-6.0mm}] (s3) to [out=0,  in=270, looseness=1]  (s4);
-\path[decorate, decoration={text align={center},text along path, text={|\small| New thought}, raise=4.0mm}]  (s1) to [out=0,  in=90,  looseness=1]  (s4);
-\end{tikzpicture}
+::: {.notes}
+科学的方法は周期的なプロセスです。実験を終了した後、最初に戻って新しい観察を行うか、新しい質問をする必要が生じる場合があります。これは、科学的方法が自然界について学ぶ方法だからです。より多くのことを学ぶにつれて、仮説や理論を変更する必要があるかもしれません。
 
-\note{
-Scientific method consists of: Forming a question, developing a hypothesis, predicting an outcome,
-testing the prediction using experiments to gather data, and analyzing the results with statistical techniques. The results are then presented, and typically a new question and hypothesis is made.
-
-科学的方法: 問題の定義，仮説の設定，実験による観察とデータ収集，データ分析，結論からなります。
-}
-
-\note[item]{帰納的手法（きのうてきしゅほう）：methods of induction (Bayesian methods), 証拠を集めていく方法，ベイズ法に基づいた解析手法}
-\note[item]{演繹的手法（えんえきてきしゅほう）：methods of deduction (Frequentist methods), 否定していく方法，頻度論に基づいた解析手法}
-
-
-# How to choose the model
-
-## Model selection
-
-> Models are needed to explain scientific phenomena.
-> Models can be equations or theory.
-> Therefore, to explain scientific phenomena, we must define a hypothesis 
-> and be able to choose the correct model.
+科学的方法は、自然界を理解するための強力なツールです。科学者はこの方法を使用して、原子から銀河までのあらゆるものを理解するための大きな進歩を遂げました。科学的方法は、継続的な学習と発見のプロセスです。それは、自然界の真実を見つける方法です
+::: 
 
 ## Hypothesis (仮説)
 
-* An idea that is defined before the experiment.
-* Generally, we want to prove (証明) or accept (採択) a hypothesis. However, in practice we define a null hypothesis (帰無仮説) and attempt to reject (棄却) it.
-* Rejecting a null hypothesis is a deductive method (演繹法).
+* 仮説は実験を行う前に決めるもの。データ見てから仮説を決めません。
+* 一般的には、仮説を証明（採択）したいが、統計学の視点から考えると、仮説は棄却するものです。
 
-## Model (モデルと)
+**仮説を証明（採択）することはできません。仮説は棄却するものです。**
 
-* We develop models after looking at the data.
-* Models need to be tested.
-* We can predict new data with models.
-* Testing a model is an inductive method (帰納法).
+## Model (モデル)
 
-## Deductive methods (演繹法)
+* モデルはデータを見てから考えるもの。
+* モデルも検証する必要があります。
+* モデルは予測に使用できます。
 
-* Statistics tests such as the t-test (t検定), analysis of variance (分散分析), and linear regressions (回帰曲線) are deductive methods.
-* We continue testing until the most likely hypothesis remains.
-* **We can NEVER proove a hypothesis!** 
-    - We can only reject a hypothesis
-
-\note[item]{Deductive methods use frequentis methods to analyze data.}
-\note[item]{Hypothesis are continuously rejected until the most plausible hypothesis remains.}
-\note[item]{A hypothesis can never be proven. They can only be disproven.}
-
-## Significance testing and hypothesis testing
+## 有意性検定および仮説検定{.smaller}
 
 :::: {.columns}
 ::: {.column width="50%"}
 
 **Significance testing (有意性検定論)**
 
-* R.A. Fisher developed this method in the 1920s.
-* Given a null hypothesis $H_0$, what is the strength of evidence that it produced data $X$? 
-* When the probability of significance is small, the evidence is weak
+* 1920年代に、R.A. Fisher が提案した。
+* 帰無仮説 $H_0$　に対して集めたデータを得られるエビデンス（証拠）。
+* P値が小さいとき、エビデンスは弱い
     - $\text{P-value} = P(T(X) \ge T_0(X)|H_0)$
-* We do not accept or reject a hypothesis with this method.
+* 仮説の棄却や採択はしない
 
 :::
 ::: {.column width="50%"}
 
 **Hypothesis testing (仮説検定論)**
 
-* Developed by J. Neyman and E.S. Pearson in the 1930s.
-* The most commonly used method.
-* We define the null hypothesis $H_0$ and the alternative hypothesis (対立仮説) $H_A$.
-* We accept or reject $H_A$ at a significance level (有意水準) $\alpha$.
+* 1930年代に、 J. Neyman と E.S. Pearson が提案した。
+* 最も使われている手法
+* 帰無仮説 $H_0$ と対立仮説 $H_A$を定義します
+* 有意水準 (significance level $\alpha$) を基準にして、 $H_A$ の採択または棄却をする手法。
 
 :::
 ::::
@@ -403,20 +404,20 @@ Jerzy Neyman was a Polish mathematician and statician, and Egon Sharpe Pearson w
 # The P-value and Hypothesis Test
 
 
-## What is the P-value (P値とは)?
+## What is the P-value (P値とは)? {.smaller}
 
-Whenever you conduct a statistical test, you almost always calculate a P-value.
+統計解析をすることで、P値を求めることは当たり前のようになりました。
 
 $$
 \text{P-value} = P(T(X) \ge T_0(X)|H_0)
 $$
 
-* For the null hypothesis $H_0$, it is the probability of observing a value $T(X)$ that is greater than $T_0(X)$.
-* It is an index to determine the consistency (整合性) of the data $X$ given the hypothesis $H$. 
-* P-values range from 0 to 1 ($0 \leq \text{P-value} \leq 1$)。
-* When the null hypothesis is true, P-values have a uniform distribution (一様分布).
-* When the null hypothesis is false,$\displaystyle \lim_{n \rightarrow \infty} P \rightarrow 0$。
-* **P-values are used to evaluate the if the data is consistent given the hypothesis.**
+
+* 帰無仮説 $H_0$ にたいして、$T(X) > T_0(X)$ がおきる確率
+* 帰無仮説に対して、収集したデータの整合性を指標科した値
+* P値は 0 ~ 1 ($0 \leq \text{P-value} \leq 1$) の範囲をとる。
+* 帰無仮説が正しいとき、P値は一様分布に従う。
+* 帰無仮説が正しくとき：$\displaystyle \lim_{n \rightarrow \infty} P \rightarrow 0$。
 
 ::: {.notes}
 
@@ -496,145 +497,36 @@ x = X |> summarise(cnt = sum(p.value <= 0.05) / length(p.value))
 For 10000 simulations$P(\text{P-value}<0.05) = `r round(x, 4)`$.
 However, the Type-II error rate (第 2 種の誤り) is `r round(1-x, 4)`.
 
-## Hypothesis testing
+## 仮説検定
 
 
-**Hypothesis testing is used to make decisions.**
+**仮説検定は客観的に意思決定をするために使います。**
 
-* We use the P-value to compare the null hypothesis and the alternative hypothesis.
-* The rule to reject the null hypothesis is to compare the significance level ($\alpha$) with the P-value.
-* If $\text{P-value} \leq \alpha$, then we reject the null hypothesis.
-* Rejecting or accepting the null hypothesis can cause error.
-    - Type-I Error (第１種の誤り, α過誤）
-    - Type-II Error (第２種の誤り, β過誤）
+* P値は帰無仮説と対立仮説を比較するために使います。
+* 帰無仮説を棄却するルールは有意水準を用いて行います。
+* $\text{P-value} \leq \alpha$　のとき帰無仮説を棄却します。
+* 帰無仮説を棄却・採択することで、誤りを起こすことになる
+    - 第１種の誤り, α過誤 (Type-I error)
+    - 第２種の誤り, β過誤 (Type-II error)
 
-## Beware of hypothesis testing
+## 帰無仮説にきをつけろ！
 
-Neyman-Pearson hypothesis testing method is called the **Null Hypothesis Significance Test (NHST) (帰無仮説の有意性検定).** 
-It is decision making method (accept or reject), so sometimes mistakes can occurr.
+Neyman-Pearson の仮説検定法は **Null Hypothesis Significance Test (NHST) (帰無仮説の有意性検定)** といいます。
+意思決定をするための手法なので、誤りを起こすこともある
 
-* **Type-I Error (第１種の誤り):** Rejecting the null hypothesis when it is true. The error rate is $\alpha$.
-* **Type-II Error (第２種の誤り):** Not reject the null hypothesis when it is false. The error rate is $\beta$.
+* **Type-I Error (第１種の誤り):** 帰無仮説が正しいのに、帰無仮説を棄却する誤り。誤る確率は $\alpha$　（有意水準と同じ値）
+* **Type-II Error (第２種の誤り):** 帰無仮説が正しくないのに、帰無仮説を棄却しない誤り。誤る確率は $\beta$（単純に求められない）
 
-## Beware of hypothesis testing
+## 帰無仮説にきをつけろ！
 
-* $\alpha$ is the significance level and is also the Type-I error rate.
-* $\beta$ is the Type-II error rate.
-* $1-\beta$ is the power of the test and it is the probability of rejecting a false null hypothesis.
-* The Type-I error rate and the Type-I error rate are indirectly proportional (反比例)
+* $\alpha$ 有意水準および第1種の誤り
+* $\beta$ 第2種の誤り
+* $1-\beta$ 検定の検出力、正しくない帰無仮説を棄却する確率
+* 第1種の誤りを厳しくすると、第2種の誤りはあまくなる (お互いに反比例する)
 
 $$
 \alpha \propto 1/\beta
 $$
-
-*If you decrease the significance level, you increase the Type-II error rate.*
-
-## Type-I and Type-II error rates, and the power
-
-```{r}
-#| echo: false
-#| warning: false
-#| message: false
-#| cache: false
-
-sigma = 15
-mu0 = 100
-mu1 = 130
-alpha = 0.05
-critval = qnorm(1-alpha, mu0, sigma)
-power = pnorm(critval, mu1, sigma, lower.tail = FALSE)
-kago2 = 1 - power
-tibble(x = seq(50, 200, by = 0.25)) |> 
-ggplot(aes(x=x)) +
-  stat_function(fun = dnorm, args = list(mean = mu0, sd = sigma), aes(color = "H0"), size = 2) +
-  stat_function(fun = dnorm, args = list(mean = mu1, sd = sigma), aes(color = "HA"), size = 2) +
-  stat_function(fun = dnorm, args = list(mean = mu1, sd = sigma), geom = "area", xlim = c(50, critval),
-                fill = "blue", alpha = 0.5) +
-  stat_function(fun = dnorm, args = list(mean = mu1, sd = sigma), geom = "area", xlim = c(critval, 200),
-                fill = "orangered", alpha = 0.5) +
-  stat_function(fun = dnorm, args = list(mean = mu0, sd = sigma), geom = "area", xlim = c(critval, 200),
-                fill = "red", alpha = 0.5) +
-  geom_vline(xintercept = critval, size =2) +
-  annotate("text", x = 115, y = 0.005, label = "β") +
-  annotate("text", x = 130, y = 0.005/3, label = "α") +
-  annotate("text", x = 140, y = 0.005, label = "1-β") +
-  annotate("text", x = critval+25, y = 0.03, label = "Critical value") +
-  annotate("segment", x = critval + 10, xend = critval, y = 0.03, yend = 0.03) +
-  scale_x_continuous("x-values") +
-  scale_y_continuous("") + 
-  scale_color_brewer(palette = "Dark2") +
-  theme(axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        legend.background = element_blank(),
-        legend.position = c(1,1),
-        legend.justification = c(1,1),
-        legend.title = element_blank(), 
-        panel.grid = element_blank())
-```
-
-The mean of the null hypothesis ($H_0$) is `r mu0`,
-the mean of the alternative hypothesis ($H_A$) is `r mu1`.
-The variance is 15 for both.
-Here, $H_A: \mu_0 > \mu_1$.
-
-
-::: .{notes}
-
-- Under the null distribution, we can determine a critical value for some alpha.
-- We can determine the distribution of the random variable for the alternative distribution.
-- If the critical value intersects the alternative distribution, and the hypothesis is $\mu_1 > \mu0$
-then the type-II error rate is the left-hand side of the distribution. The reason for this is because, we would erroneously not reject the null hypothesis if the random variable for the alternative distribution was on the left of the critical value. 
-- The farther the alternative distribution is from the critical value, the lower the chances of making a type-II error, since there is less area under the distribution that is on the left of the critical value.
-
-:::
-
-## The relationship between the Type-I and II error rates
-
-:::: {.columns}
-::: {.column width="50%"}
-
-If we decrease the risk of a Type-I error, we increase the risk of a Type-II error.
-Therefore, we are lowering the chance of getting a correct result.
-We must always consider these two problems.
-
-:::
-::: {.column width="50%"}
-
-```{r}
-#| echo: false
-#| warning: false
-#| message: false
-
-sigma = 15
-mu0 = 100
-mu1 = 130
-alpha = 0.05
-critval = qnorm(1-alpha, mu0, sigma)
-power = pnorm(critval, mu1, sigma, lower.tail = FALSE)
-kago2 = 1 - power
-
-tibble(alpha = seq(0.10, 0.001, by = -0.001)) |> 
-  mutate(critval = qnorm(1-alpha, mu0, sigma)) |> 
-  mutate(power = pnorm(critval, mu1, sigma, lower.tail = FALSE),
-         kago2 = 1 - power) |> 
-  ggplot(aes(x = alpha)) +
-  geom_line(aes(y = kago2, color = "β"), size = 2) +
-  geom_line(aes(y = power, color = "1-β"), size = 2)+
-  scale_x_continuous("Type-I Error（α）") +
-  scale_y_continuous("Type-II Error（β）and power（1-β）") + 
-  scale_color_brewer(palette = "Dark2") +
-  theme(axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        legend.background = element_blank(),
-        legend.position = c(1,0.5),
-        legend.justification = c(1,0.5),
-        legend.title = element_blank(), 
-        panel.grid = element_blank())
-
-```
-:::
-::::
-
 
 
 ## Type-I and II error: Correctly rejecting a test
@@ -685,33 +577,33 @@ Therefore, a total of 90+76 null hypotheses will be rejected, but only 76 / (90+
 
 :::
 
-## Differences between significance testing and NHST
+## 有意性検定と仮説検定の違い {.smaller}
 
 :::: {.columns}
 ::: {.column width="50%"}
 
 **Significance testing (有意性検定)**
 
-* Fisher's method
-* P-value is important
-* P-values are used to reject a null hypothesis
-* Calculate after observing the data
-* Valid only for the data that was analyzed
+* Fisher の手法
+* P値の値は重要
+* 帰無仮説を棄却するために使う
+* データを見てから計算する
+* 解析したデータのみに有効
 * Subjective decision (主観的な判断)
-* Decisions are based on the evidence
+* エビデンスによる意思決定
 
 :::
 ::: {.column width="50%"}
 
 **NHST (仮説検定)**
 
-* Neyman and Pearson Method
-* The Type-I error is important (α)
-* We use to minimize α and β
-* We choose α and β before observing the data
-* Based on the belief that the experiments were well replicated and the results are stable for long times
+* Neyman and Pearson の手法
+* 第1種の誤りが重要
+* 第1種と第2種の誤りを最低限にする
+* データを見てから、α と β を選ぶ
+* 実験は十分に反復されており、今後も似たようなデータを期待できる
 * Objective decision (客観的)
-* Decisions are based on rules and not evidence
+* ルールに基づいた意思決定
 
 :::
 ::::
@@ -735,7 +627,7 @@ individually, some experiments will provide evidence for rejecting the null and 
 # Introduction to the Null Hypothesis Significance Test (NHST)
 
 
-## Example
+## Example {.smaller}
 
 :::: {.columns}
 ::: {.column width="50%"}
@@ -781,7 +673,7 @@ Do we accept the alternative hypothesis?
 Do we reject the null hypothesis?
 :::
 
-## Amerhein et al. 2019. Nature 567: 305-307
+## Amerhein et al. 2019. Nature 567: 305-307 {.smaller}
 
 :::: {.columns}
 ::: {.column width="50%"}
