--- a/index.qmd
+++ b/index.qmd
@@ -106,10 +106,10 @@ q1 + q2 + q3
 
 **たとえば**
 
-* `<-` は `<` と `-` の合字 (リガチャー, ligature) です `(ALT + -)`
-* `|>` は `|` と `>` の合字です `(CTRL + SHIFT + M)`
-* `<=` は `<` と `=` の合字です
-* `!=` は `!` と `=` の合字です
+* `<-` は `<` と <kbd>-</kbd> の合字 (リガチャー, ligature) です (<kbd>ALT</kbd> + <kbd>-</kbd>)
+* `|>` は `|` と <kbd>></kbd> の合字です (<kbd>CTRL</kbd> + <kbd>SHIFT</kbd> + <kbd>M</kbd>)
+* `<=` は `<` と <kbd>=</kbd> の合字です
+* `!=` は `!` と <kbd>=</kbd> の合字です
 
 **よく使うリンク**
 
