--- a/part01.qmd
+++ b/part01.qmd
@@ -16,7 +16,7 @@ library(fontawesome)
 ## 代入演算子 (assignment operator) とベクトル (vector) とは
 
 
-* 代入は `=` か `<-` (`<` と `-`) です。伝統的に使われる代入は `<-` ですが、私は `=` を使っています。
+* 代入は `=` か `<-` (<kbd>ALT</kbd>+<kbd>-</kbd>) です。伝統的に使われる代入は `<-` ですが、私は `=` を使っています。
 * 左辺は変数名、右辺は値です。
 
 ```{r}
@@ -31,6 +31,7 @@ c(a, b)
 
 
 ```{r}
+
 (a + b) * c(a, b)
 ```
 
